feat: Initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+
+.idea
+
 # Logs
 logs
 *.log
@@ -37,6 +44,7 @@ bower_components
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
+/build
 
 # Dependency directories
 node_modules/
@@ -102,7 +110,6 @@ dist
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
 
 # Docusaurus cache and generated files
 .docusaurus
@@ -127,4 +134,6 @@ dist
 .yarn/unplugged
 .yarn/build-state.yml
 .yarn/install-state.gz
+/.pnp
 .pnp.*
+
